--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-/* This document has been modified from Caroline Barriere's initial file. */
+<!-- This document has been modified from Caroline Barriere's initial file. -->
 <!DOCTYPE html>
 <html>
 <head>
