--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
 	<! This style sheet is taken from  https://www.w3schools.com/howto/howto_js_tabs.asp>
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
+	<title>Produce Mart</title>
 </head>
 
 <body>
+
+<div class="header">
+	<h1 width="170" height="142">Produce Mart</h1>
+</div>
 
 <!-- Tab links, each one with an onclick event associated with it -->
 <div class="tab">
