--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<! This style sheet is taken from  https://www.w3schools.com/howto/howto_js_tabs.asp>
-	<link href="styles/style.css" rel="stylesheet" type="text/css">
+	<link href="index.css" rel="stylesheet" type="text/css">
 	<title>Produce Mart</title>
 </head>
 
@@ -49,8 +49,8 @@
   <div id="displayCart"></div>
 </div>
 
-<script src="scripts/groceries.js"></script>
-<script src="scripts/main.js"></script>
+<script src="groceries.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
