--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <h3>Client Information</h3>
   <p>Tell us a bit about you.</p>
 	Choose a Category:
-	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
-	<option value=""></option>
-	<option value="Vegetarian">Vegetarian</option>
-    <option value="GlutenFree">GlutenFree</option>
-    <option value="None">None</option>
+	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">	
+      	<input type="checkbox" name="option" value="None">None<br>
+      	<input type="checkbox" name="option" value="Vegetarian">Vegetarian<br>
+      	<input type="checkbox" name="option" value="GlutenFree">Gluten Free<br>
+      	<input type="checkbox" name="option" value="None">None<br>
 	</select>
 </div>
 
