--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- Tab content -->
 <div id="Client" class="tabcontent">
   <h3>Client Information</h3>
-  <p>Tell us a bit about you.</p>
+  <p>Tell us a bit about you...</p>
 	Select what applies to you:	
       	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
 	<option value=""></option>
@@ -32,6 +32,8 @@
 	<option value="Both">Vegetarian and Gluten Free</option>
     	<option value="None">None</option>
 	</select>
+	
+	<br> 
 	
 	Select your preference:	
     	<select id="organic" name="organic" onchange="populateListProductChoices(this.id, 'displayProduct')">
