--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	Select your preference:	
     	<select id="organic" name="organic" onchange="populateListProductChoices(this.id, 'displayProduct')">
 	<option value=""></option>
-	<option value="Organic">Organic</option>
-    	<option value="Non-organic">Non-organic</option>
+	<option value="Organic">Organic Food</option>
+    	<option value="Non-organic">Non-organic Food</option>
 	<option value="No preference">No preference</option>
 	</select>
 </div>
