--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<br> 
 	
 	Select your preference:	
-    	<select id="organic" name="organic" onchange="populateListProductChoices(this.id, 'displayProduct')">
+    	<select id="organic" name="organic" onchange="populateListProductChoices(this.id, 'displayOrganic')">
 	<option value=""></option>
 	<option value="Organic">Organic Food</option>
     	<option value="Non-organic">Non-organic Food</option>
@@ -49,6 +49,7 @@
   <p>We preselected products based on your restrictions.</p>
 	 Choose items to buy:
 	 <div id="displayProduct"></div>
+	 <div id="displayOrganic"></div>
 	 <button id="addCart" type="button" class="block" onclick="selectedItems()">
 		Add selected items to cart.
 	</button>
