--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<br> 
 	
 	Select your preference:	
-    	<select id="organic" name="organic" onchange="populateListProductChoices(this.id, 'displayOrganic')">
+    	<select id="organic" name="organic" onchange="populateListProductChoices(this.id, 'displayProduct')">
 	<option value=""></option>
 	<option value="Organic">Organic Food</option>
     	<option value="Non-organic">Non-organic Food</option>
