--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <div class="tab">
   <button class="tablinks" onclick="openInfo(event, 'Personal Information')">Personal Information</button>
   <button class="tablinks" onclick="openInfo(event, 'Products')">Products</button>
-  <button class="tablinks" onclick="openInfo(event, 'Cart')">Cart</button>
+  <button class="tablinks" onclick="openInfo(event, 'Shopping Cart')">Shopping Cart</button>
 </div>
 
 <!-- Tab content -->
 <div id="Personal Information" class="tabcontent">
   <h3>Personal Information</h3>
-  <p>Tell us a bit about you...</p>
-	Select what applies to you:	
+  <p>Please tell us a bit about yourself to help us improve your shopping experience...</p>
+	Select your restrictions:	
       	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
 	<option value=""></option>
 	<option value="Vegetarian">Vegetarian</option>
@@ -45,18 +45,18 @@
 </div>
 
 <div id="Products" class="tabcontent">
-  <h3>Your targeted products</h3>
-  <p>We preselected products based on your restrictions.</p>
-	 Choose items to buy:
+  <h3>Products</h3>
+  <p>These products were selected for you based on your restrictions and preferences</p>
+	 Choose items to add to your cart:
 	 <div id="displayProduct"></div>
 	 <button id="addCart" type="button" class="block" onclick="selectedItems()">
-		Add selected items to cart.
+		Add to cart
 	</button>
 </div>
 
-<div id="Cart" class="tabcontent">
-  <h3>Cart</h3>
-  <p>Here is your cart.</p>
+<div id="Shopping Cart" class="tabcontent">
+  <h3>Shopping Cart</h3>
+  <p>Here are the items in your shopping cart</p>
   <div id="displayCart"></div>
 </div>
 
