--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <div class="header">
 	<h1 width="170" height="142">Produce Mart</h1>
 </div>
+	
+<div class="subheader">
+	<h2 width="170" height="115">A pleasant online shopping experience for everyone!</h2>
+</div>
 
 <!-- Tab links, each one with an onclick event associated with it -->
 <div class="tab">
