--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 	
 <div class="subheader">
-	<h2 width="170" height="115">A pleasant online shopping experience for everyone!</h2>
+	<h2 width="100" height="80">A pleasant shopping experience for everyone!</h2>
 </div>
 
 <!-- Tab links, each one with an onclick event associated with it -->
