--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <button class="tablinks" onclick="openInfo(event, 'Shopping Cart')">Shopping Cart</button>
 </div>
 
+<div class="welcome">
+	<h3 width="100" height="80">Welcome to Produce Mart!</h3>
+</div>
+
 <!-- Tab content -->
 <div id="Personal Information" class="tabcontent">
   <h3>Personal Information</h3>
